# Baikal-ML

inference/: analyze.ipynb  encoder_arch.py
inference/tf/: inference.c
inference/tflite/: CMakeLists.txt  tflite_inference.cpp
